--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -3,3 +3,11 @@
 - chapter: Spatial unit
   sections:
     - file: spatial_unit/unit
+    - file: spatial_unit/enclosed_tessellation
+    - file: spatial_unit/Parallelized_enclosures
+    - file: spatial_unit/Generate_enclosures
+    - file: spatial_unit/chunk_uk
+
+- chapter: Cluster analysis
+  sections:
+    - file: clusters/mastermap_openmap_cluster
