--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
-title: Urban Grammar Spatial Signatures
+title: Urban Grammar AI | WP2 - Spatial Signatures
 author: Dani Arribas-Bel, Martin Fleischmann
-logo: logo.jpeg
+logo: logo.svg
 
 execute:
   execute_notebooks: "off"
@@ -9,3 +9,5 @@ repository:
   url: https://github.com/urbangrammarai/spatial_signatures
 launch_buttons:
   binderhub_url: https://mybinder.org
+html:
+  use_repository_button: true
