--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -15,6 +15,7 @@
     - file: spatial_unit/Generate_enclosures
     - file: spatial_unit/chunk_uk
     - file: spatial_unit/chunked_enclosed_tessellation
+    - file: spatial_unit/hierarchical_ids
 
 - chapter: Populating units with data
   sections:
