--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -20,6 +20,7 @@
   sections:
     - file: measuring/cross-chunk_indices
     - file: measuring/morphometrics
+    - file: measuring/accessibility
 
 - chapter: Cluster analysis
   sections:
