--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -21,6 +21,7 @@
   sections:
     - file: measuring/cross-chunk_indices
     - file: measuring/morphometrics
+    - file: measuring/accessibility
     - file: measuring/GHS-composite-S2_ndvi
 
 - chapter: Cluster analysis
