--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -30,6 +30,26 @@
     - file: clusters/mastermap_openmap_cluster
     - file: clusters/model_selection
     - file: clusters/spatial_signatures_gb
-    - file: clusters/exploration_of_signatures
+    - file: clusters/level2_ss
+    - file: clusters/signature_labels_data
     - file: clusters/form_signatures_GB
+    - file: clusters/leve2_form
+    - file: clusters/function_signatures_GB
+    - file: clusters/level2_function
 
+- chapter: Signature exploration
+  sections:
+    - file: clusters/plot_signatures
+    - file: clusters/exploration_of_signatures
+    - file: clusters/feature_importance
+    - file: clusters/cluster_feature_importance
+    - file: clusters/exploration_of_form_signatures
+    - file: clusters/form_feature_importance
+    - file: clusters/validation
+
+- chapter: Data product
+  sections:
+    - file: data_product/overview
+    - file: data_product/create_data_product
+    - file: data_product/oa_interpolate
+    - file: data_product/vector_tile
