--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -48,6 +48,8 @@
     - file: clusters/form_feature_importance
     - file: clusters/validation
     - file: esda/sizeshape
+    - file: esda/co-occurence
+    - file: esda/ttwa
 
 - chapter: Data product
   sections:
